# murmur

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  Makefile  README.md  persona.md  pyproject.toml
.claude/skills/create-pr/: SKILL.md
.claude/skills/murmur-build-spec/: SKILL.md
.claude/skills/murmur-handoff/: SKILL.md
.claude/skills/murmur-ship/: SKILL.md
.claude/skills/murmur-smoke/: SKILL.md
.github/scripts/: check_pr.py
.github/workflows/: ci.yml  pr-conventions.yml
.zed/: settings.json
assets/: bed_sources.txt
docs/: index.html
scripts/: check_any_budget.py  check_comment_language.py  check_paths.py  check_source_language.py  dev_preflight.py  devwatch.py  memwatch.py
specs/: 01-core-loop.md  02-voice-provider.md  03-01-brain-harness.md  10-tui.md  DESIGN.md  STATUS.md
specs/spec01/: 01-core-loop.md
specs/spec02/: 02-voice-provider.md
specs/spec03/: 03-01-brain-harness.md  03-02-ducking.md  03-03-guide-harness.md  03-04-background-bed.md
specs/spec04/: 04-no-dead-air.md
specs/spec05/: 05-memory.md
specs/spec10/: 10-tui.md
src/murmur/: __init__.py  __main__.py  app.py  audio_player.py  bed.py  brain.py  cadence.py  cli_host.py  compaction.py  config.py  contracts.py  director.py  guide.py  harness.py  logging_setup.py  memory.py  paths.py  persona.py  scene.py  setup.py  startup.py  talk_tools.py
src/murmur/engine/: __init__.py  core.py  ffmpeg_io.py  mixer.py
src/murmur/music/: __init__.py  context.py  preflight.py  programmer.py  provider.py  tools.py
src/murmur/prompts/: __init__.py  cadence.py  guide.py  memory.py  music.py  persona_seed.md  talk.py
src/murmur/voice/: __init__.py  _wav.py  backend.py  client.py  mlx_backend.py  protocol.py  qwen3.py  remote.py  sidecar.py  stub.py
tests/: fakes.py  test_app_wiring.py  test_audio_engine.py  test_audio_player.py  test_bed.py  test_brain_next_talks.py  test_brain_stub.py  test_cadence.py  test_check_paths.py  test_cli_host.py  test_compaction.py  test_config_and_factories.py  test_dev_preflight.py  test_devwatch.py  test_director.py  test_director_memory.py  test_director_music.py  test_ffmpeg_io.py  test_harness.py  test_logging_setup.py  test_memory.py  test_memory_contracts.py  test_memwatch.py  test_mixer.py  test_mlx_backend.py  test_mlx_backend_integration.py  test_music_context.py  test_music_preflight.py  test_music_programmer.py  test_music_provider.py  test_music_tools.py  test_paths.py  test_persistent_memory.py  test_persona.py  test_prompts.py  test_qwen3_integration.py  test_scene.py  test_setup.py  test_startup.py  test_talk_tools.py  (+5 more)
