[project]
name = "murmur"
version = "0.0.1"
description = "A fully-local, personal-use companion radio with Claude as its brain."
requires-python = ">=3.10"
# spec 01 step 2 introduces the first third-party dependency: claude-agent-sdk
# (the real Brain, via the local Claude Code subscription OAuth — no API key).
# The stub VoiceProvider + StubBrain still run on the stdlib alone, so the fast
# test layer (DESIGN §11.1) needs no network. A real TTS adapter lands in spec 02.
dependencies = [
    "claude-agent-sdk>=0.2.110",
]

[project.optional-dependencies]
# Dev tooling. Install with:  pip install -e ".[dev]"  then  pre-commit install
# The English-only-comment hook itself is stdlib-only (no install needed); this
# is just the automation harness around it.
dev = [
    "pre-commit>=3.5",
    "pytest>=8",
    "ruff>=0.15",
    "pyright>=1.1.390",  # static type-checking: gives the Protocol seams (contracts.py) teeth
]
# Optional real TTS voices. All MLX backends (spark/qwen3/chatterbox/dia + the
# post-L0 voxcpm2 candidate, spec 02 §3.3) run on ONE runtime — mlx-audio,
# Apple-Silicon-only — so a single extra covers them all. The core, the unit suite, and the stub/sidecar-fake
# voices need none of it (they run model-free). A future non-MLX backend (e.g. a
# PyTorch CosyVoice2/Fish) would add its own extra without touching the core.
# Install on a Mac:  pip install -e ".[tts-mlx]"   then:  murmur --voice spark
tts-mlx = [
    "mlx-audio>=0.4.4",  # the MLX TTS runtime hosting all the MLX voices
    "soxr",              # audio resampler the Spark backend (BiCodec) needs at load
]
# Default music source (spec 03-01): yt-dlp covers YouTube + Bilibili with no
# login/account. The core + unit suite run without it (fakes / no network);
# enable real music discovery with:  pip install -e ".[music]"
music = [
    "yt-dlp>=2024.1",  # the `yt-dlp` binary the MusicProvider shells out to
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Async tests wrap their coroutine in asyncio.run(), so no asyncio plugin is needed.
# Integration tests (real TTS model, etc.) are tagged and excluded by default
# (DESIGN §11.2) — run them deliberately with:  pytest -m integration
addopts = "-m 'not integration'"
markers = [
    "integration: heavy/real-model tests, run on demand (not in the fast loop)",
]

[tool.ruff]
# Project-owned formatting so it's deterministic across machines/editors instead
# of relying on an editor's bundled default. Black-compatible defaults.
line-length = 88
target-version = "py310"

[tool.pyright]
# Static type-checking so the Protocol seams (contracts.py VoiceProvider /
# MusicProvider / MemoryStore, brain.Brain) are actually enforced: an impl whose
# signatures drift from the contract fails here. Run:  pyright
include = ["src", "tests"]
pythonVersion = "3.10"
# Shipped code is held to strict; tests stay at the base mode (they legitimately
# reach into internals and use loosely-typed fakes/monkeypatch — strict there is
# noise, not safety).
typeCheckingMode = "basic"
strict = ["src"]
venvPath = "."
venv = ".venv"
# mlx-audio (optional, Apple-Silicon-only) ships no type stubs; its imports carry
# per-line `# pyright: ignore[reportMissingTypeStubs]` in mlx_backend.py, and the
# few untyped-model touch points are confined there.

[project.scripts]
murmur = "murmur.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/murmur"]
